--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,10 @@
   scroll-behavior: smooth;
   color-scheme: dark;
 }
+.icon-size {
+  width: 100px;
+  height: 100px;
+}
 
 .hash-span {
   margin-top: -100px;
@@ -44,7 +48,7 @@
 }
 
 .green-pink-gradient {
-  background: "#00cea8";
+  background: #00cea8;
   background: linear-gradient(90.13deg, #00cea8 1.9%, #bf61ff 97.5%);
   background: -webkit-linear-gradient(-90.13deg, #00cea8 1.9%, #bf61ff 97.5%);
 }
